# ndd_utilities

./: .bumpversion.cfg  .gitignore  .pre-commit-config.yaml  mkdocs.yml  noxfile.py  pyproject.toml  source.code-workspace  tasks.py
docs/: tutorials.md
envs/: .gitignore  shared.env
scripts/: chmod_x.sh
scripts/bump2version/: major.sh  minor.sh  to_version.sh
scripts/mkdocs/: build.sh  init.sh  serve.sh
source/: __init__.py
source/console/: welcome.py
tests/: test_source.py
tests/console/: test_welcome.py
